--- a/views/admin/item/detail_item/show_feature.ejs
+++ b/views/admin/item/detail_item/show_feature.ejs
@@ -36,26 +36,34 @@
               </thead>
 
               <tbody>
-                <% for(let i = 0; i < feature.length; i++){ %>
-                <tr>
-                  <td><%= i + 1 %></td>
-                  <td><%= feature[i].name %></td>
-                  <td><%= feature[i].qty %></td>
-                  <td>
-                    <img src="https://admin-staycation.herokuapp.com/<%= feature[i].imageUrl %>" alt="imageUrl"
-                      width="70px">
-                  </td>
-                  <td>
-                    <form action="/admin/item/<%= itemId %>/feature/<%= feature[i].id %>?_method=DELETE" method="POST">
-                      <a href="javascript:void();" type="button" class="btn btn-warning btn-circle btn-sm button-update"
-                        data-id="<%= feature[i].id %>" data-name="<%= feature[i].name %>"
-                        data-qty="<%= feature[i].qty %>"><i class=" fas fa-edit"></i></a>
-                      <button type="submit" class="btn btn-danger btn-circle btn-sm"><i
-                          class="fas fa-trash"></i></button>
-                    </form>
-                  </td>
-                </tr>
-                <% } %>
+                <% for(let i=0; i < feature.length; i++){ %>
+                  <tr>
+                    <td>
+                      <%= i + 1 %>
+                    </td>
+                    <td>
+                      <%= feature[i].name %>
+                    </td>
+                    <td>
+                      <%= feature[i].qty %>
+                    </td>
+                    <td>
+                      <img src="https://service-staycation.herokuapp.com/<%= feature[i].imageUrl %>" alt="imageUrl"
+                        width="70px">
+                    </td>
+                    <td>
+                      <form action="/admin/item/<%= itemId %>/feature/<%= feature[i].id %>?_method=DELETE"
+                        method="POST">
+                        <a href="javascript:void();" type="button"
+                          class="btn btn-warning btn-circle btn-sm button-update" data-id="<%= feature[i].id %>"
+                          data-name="<%= feature[i].name %>" data-qty="<%= feature[i].qty %>"><i
+                            class=" fas fa-edit"></i></a>
+                        <button type="submit" class="btn btn-danger btn-circle btn-sm"><i
+                            class="fas fa-trash"></i></button>
+                      </form>
+                    </td>
+                  </tr>
+                  <% } %>
               </tbody>
 
             </table>
