--- a/views/admin/bank/table_bank.ejs
+++ b/views/admin/bank/table_bank.ejs
@@ -19,26 +19,34 @@
           </tr>
         </thead>
         <tbody>
-          <% for(let i = 0; i < bank.length; i++){ %>
-          <tr>
-            <td><%= i + 1 %></td>
-            <td><%= bank[i].nameBank %></td>
-            <td><%= bank[i].nomorRekening %></td>
-            <td><%= bank[i].name %></td>
-            <td>
-              <img src="https://admin-staycation.herokuapp.com/<%= bank[i].imageUrl %>" alt="imageUrl" width="70px">
-            </td>
-            <td>
-              <form action="/admin/bank/<%= bank[i].id %>?_method=DELETE" method="POST">
-                <a href="javascript:void();" type="button" class="btn btn-warning btn-circle btn-sm button-update"
-                  data-id="<%= bank[i].id %>" data-name="<%= bank[i].name %>" data-namebank="<%= bank[i].nameBank %>"
-                  data-nomorrekening="<%= bank[i].nomorRekening %>" "><i
+          <% for(let i=0; i < bank.length; i++){ %>
+            <tr>
+              <td>
+                <%= i + 1 %>
+              </td>
+              <td>
+                <%= bank[i].nameBank %>
+              </td>
+              <td>
+                <%= bank[i].nomorRekening %>
+              </td>
+              <td>
+                <%= bank[i].name %>
+              </td>
+              <td>
+                <img src="https://service-staycation.herokuapp.com/<%= bank[i].imageUrl %>" alt="imageUrl" width="70px">
+              </td>
+              <td>
+                <form action="/admin/bank/<%= bank[i].id %>?_method=DELETE" method="POST">
+                  <a href="javascript:void();" type="button" class="btn btn-warning btn-circle btn-sm button-update"
+                    data-id="<%= bank[i].id %>" data-name="<%= bank[i].name %>" data-namebank="<%= bank[i].nameBank %>"
+                    data-nomorrekening="<%= bank[i].nomorRekening %>" "><i
                     class=" fas fa-edit"></i></a>
-                <button type="submit" class="btn btn-danger btn-circle btn-sm"><i class="fas fa-trash"></i></button>
-              </form>
-            </td>
-          </tr>
-          <% } %>
+                  <button type="submit" class="btn btn-danger btn-circle btn-sm"><i class="fas fa-trash"></i></button>
+                </form>
+              </td>
+            </tr>
+            <% } %>
         </tbody>
       </table>
     </div>
